[gd_scene load_steps=6 format=3 uid="uid://bqwy0lc55ksab"]

[ext_resource type="Script" path="res://scripts/menu-scripts/MenuManager.gd" id="1_qcj65"]
[ext_resource type="AudioStream" uid="uid://cebhn3co8nfvv" path="res://assets/main_menu.wav" id="2_1d223"]
[ext_resource type="PackedScene" uid="uid://bts3l1tbe6g7j" path="res://scenes/menu-scenes/MainMenu.tscn" id="3_yqfju"]
[ext_resource type="PackedScene" uid="uid://wan2isystoxp" path="res://scenes/menu-scenes/OptionsMenu.tscn" id="4_qi2jo"]
[ext_resource type="PackedScene" uid="uid://bdrku4cijohn3" path="res://scenes/menu-scenes/GameOverMenu.tscn" id="5_qhptl"]

[node name="MenuManager" type="Container"]
script = ExtResource("1_qcj65")

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_1d223")
autoplay = true
bus = &"Music"

[node name="MainMenu" parent="." instance=ExtResource("3_yqfju")]
visible = false
layout_mode = 2

[node name="OptionsMenu" parent="." instance=ExtResource("4_qi2jo")]
visible = false
layout_mode = 2

[node name="GameOverMenu" parent="." instance=ExtResource("5_qhptl")]
layout_mode = 2

[connection signal="quit_game" from="MainMenu" to="." method="_on_main_menu_quit_game"]
[connection signal="show_options" from="MainMenu" to="." method="_on_main_menu_show_options"]
[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
[connection signal="go_back" from="OptionsMenu" to="." method="_on_options_menu_go_back"]
[connection signal="go_main_menu" from="GameOverMenu" to="." method="_on_game_over_go_main_menu"]
[connection signal="restart_game" from="GameOverMenu" to="." method="_on_game_over_restart_game"]

[editable path="MainMenu"]
[editable path="OptionsMenu"]
[editable path="GameOverMenu"]
